# MediQA

./: .gitignore  Dockerfile  README.md  compose.yml  pyproject.toml
mediqa/: app.py  config.yml  webui.py
mediqa/config/: core.py
mediqa/data/: val_mini.csv
mediqa/notebooks/: eda.ipynb  evaluate.ipynb  model_selection.ipynb
mediqa/processing/: extract.py  preprocess.py
mediqa/rag/: manager.py  reader.py
mediqa/rag/adapters/: chromadb_adapter.py
