[project]
name = "mediqa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=3.5.0",
    "nltk>=3.9.1",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "pydantic>=2.11.0",
    "strictyaml>=1.7.3",
    "tensorflow>=2.14.0",
    "torch>=2.6.0",
    "transformers>=4.50.3",
]

[dependency-groups]
dev = [
    "evaluate>=0.4.3",
    "ipykernel>=6.29.5",
    "rouge-score>=0.1.2",
]
