[project]
name = "mediqa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.5.2",
    "asyncio>=3.4.3",
    "bitsandbytes>=0.45.4",
    "chromadb>=0.6.3",
    "datasets>=3.5.0",
    "embed-anything>=0.5.5",
    "embed-anything-gpu>=0.5.3",
    "fastapi>=0.115.12",
    "nltk>=3.9.1",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "pydantic>=2.11.0",
    "strictyaml>=1.7.3",
    "torch>=2.6.0",
    "transformers>=4.50.3",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "evaluate>=0.4.3",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "rouge-score>=0.1.2",
    "seaborn>=0.13.2",
    "sentencepiece>=0.2.0",
    "tqdm>=4.67.1",
]
